<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:hint="@string/please_input_your_name_before_start"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/start"
        android:id="@+id/ctaButton"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/rank"
        android:id="@+id/ctaRank"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
